fix(datatable): fix wrap title datable scrollable mode on rezise window

--- a/src/app/components/datatable/parts/header/datatable-header.scss
+++ b/src/app/components/datatable/parts/header/datatable-header.scss
@@ -72,7 +72,7 @@ $border-color : #DCDCDC;
     align-items: center;
     overflow: hidden;
     cursor: pointer;
-    white-space: nowrap;
+  //  white-space: nowrap;
   }
   >.ui-row .ui-cel.-textleft{
     text-align: left;
